# PyPackIT-Template

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.control/: 2_pkg.yaml  3_doc.yaml  4_its.yaml  5_vcs.yaml  6_ci.yaml
.github/: .pre-commit-config.yaml  .ruff.toml  CODEOWNERS  dev_environment.yaml
.github/.control/: .metadata.json
.github/ISSUE_TEMPLATE/: 01_app_bug_api.yaml  config.yml
.github/workflow_requirements/: mypy.txt
.github/workflows/: _pkg_lint.yaml  main.yaml
docs/website/: Makefile  environment.yaml
docs/website/source/: 404.md  _toc.yaml  conf.py  index.md
docs/website/source/_static/css/extensions/: sphinx-design.css
docs/website/source/_static/css/theme/: custom.css
docs/website/source/_static/js/: icon_conda.js
docs/website/source/api/: index.md  index.rst
docs/website/source/api/my_new_project/: my_new_project.md
docs/website/source/help/contact/: index.md
docs/website/source/help/sitemap/: index.md
docs/website/source/intro/: index.md
docs/website/source/manual/: index.md  install.md
docs/website/source/news/: index.md
pkg/: MANIFEST.in  README.md  conda_env.yaml  pyproject.toml
pkg/src/my_new_project/: __init__.py  __main__.py
pkg/src/my_new_project/_util/: __init__.py  file.py
pkg/src/my_new_project/data/: __init__.py
pkg/src/my_new_project/exception/: __init__.py  data.py
template/.control/: 1_proj.yaml  3_doc.yaml  6_ci.yaml
template/docs/website/source/: conf.py
template/docs/website/source/about/: index.md
template/docs/website/source/api/my_new_project/: my_new_project._util.file.md  my_new_project._util.md
template/docs/website/source/contribute/: index.md
template/pkg/src/my_new_project/_util/: file.py
template/tests/src/my_new_project_testsuite/: __init__.py  __main__.py  general_tests.py
tests/: MANIFEST.in  conda_env.yaml  pyproject.toml  requirements.txt
tests/src/my_new_project_testsuite/: __init__.py  __main__.py  data_tests.py  general_tests.py
tests/src/my_new_project_testsuite/data/config/: coverage.toml  pytest.toml
